Changed disabling body overflow hidden for body position fixed

--- a/src/components/Hamburger/Hamburger.scss
+++ b/src/components/Hamburger/Hamburger.scss
@@ -15,7 +15,7 @@
   }
 
   &-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: -100vw;
     min-height: 100vh;
